# MMP

./: .gitattributes  .gitignore  .gitmodules  README.md
map/: README.md  download_terrain_data.py  extract_center.py  interactive_extract.py
src/map/: README.md  interactive_extract.py
src/mmp_rviz_plugins/: CMakeLists.txt  package.xml
src/mmp_rviz_plugins/include/mmp_rviz_plugins/: map_selector_panel.hpp  point_picker_tool.hpp  trajectory_command_panel.hpp
src/mmp_rviz_plugins/plugins/: plugin_description.xml
src/mmp_rviz_plugins/src/: map_selector_panel.cpp  point_picker_tool.cpp  trajectory_command_panel.cpp
src/mmp_terrain/: README.md  package.xml  setup.cfg  setup.py
src/mmp_terrain/data/: dokdo.tif
src/mmp_terrain/mmp_terrain/: terrain_publisher.py
src/mmp_terrain/scripts/: download_terrain_data.py
src/mmp_visualization/: CMakeLists.txt  package.xml
src/mmp_visualization/launch/: mmp.launch.py
src/mmp_visualization/rviz/: mmp.rviz
