<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mmp_rviz_plugins</name>
  <version>0.1.0</version>
  <description>RViz plugins for MMP project</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>
  <depend>pluginlib</depend>
  <depend>std_srvs</depend>
  <depend>formation_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins/plugin_description.xml"/>
  </export>
</package>
