<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mmp_visualization</name>
  <version>0.1.0</version>
  <description>Visualization package for MMP (Mission Planning)</description>
  <maintainer email="lim@todo.todo">lim</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>mmp_terrain</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>grid_map_rviz_plugin</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
